# rendercv-resume

./: .gitignore  IMPLEMENTATION_SUMMARY.md  Jaepil_Choi_CV.yaml  Jaepil_Choi_CV_en.yaml  Jaepil_Choi_CV_kr.yaml  README.md  pyproject.toml
cv_builder/: __init__.py  cli.py  composer.py  loader.py  models.py  utils.py  validator.py
data/companies/DB자산운용/: 20251010조직도.md  퀀트운용본부_운용철학.md
data/companies/미래에셋자산운용/: 2025반기보고서_사업의개요.md  miraeasset_investment_brochure (1).txt  퇴직연금RA일임운용플랫폼구축계약입찰공고.md
data/companies/한국투자증권/: 20250923한국투자증권설명회.md
data/current_application/: 2025-10-10_DB자산운용.json  2025-10-15_미래에셋자산운용.json  2025-10-25_IBK투자증권.json  2025-10-25_LinqAlpha.json  2025-10-25_신영증권.json  2025-10-25_아이엠증권(경력직).json  2025-10-25_유안타증권.json
data/info/: careers.yaml  certificates.yaml  education.yaml
data/previous_applications/: 2022-10-03_미래에셋자산운용.json  2024-05-31_신영증권.json  2025-06-18_미래에셋자산운용.json  2025-09-07_DS투자증권.json  2025-10-01_한국투자증권.json  2025-10-10_DB자산운용.json  2025-10-15_미래에셋자산운용.json  2025-10-24_메리츠증권.json  template.json
data/tips/: 성장과정1.md  성장과정2.md  지원동기1.md
engineeringresumes/: Header.j2.typ
modular_cv/: README.md
modular_cv/base/: base_en.yaml  base_kr.yaml
modular_cv/cv_items/additional_info/: languages.yaml  military.yaml  skills.yaml
modular_cv/profiles/: full-en.yaml  full-kr.yaml  quant-focused-en.yaml
old/: resume_kor_250528_최재필_미래에셋.tex
rendercv_output/: Jaepil_Choi_CV.html  Jaepil_Choi_CV.md  Jaepil_Choi_CV.typ  최재필_CV.html  최재필_CV.md  최재필_CV.typ
scripts/: pdf_to_txt.py  update_char_counts.py
(+28 files in other folders)
